# Exam-Generator

./: README.md
backend/: config.py  ingest.py  main.py  process_pdf.py  pyproject.toml
backend/agents/: __init__.py  agent.py  answer_formatter.py  core.py  initialize_models.py  problem_designer.py  topic_selector.py
backend/agents/tests/: test_ag.py  test_ec.py  test_pd.py  test_tp.py
backend/api/: app.py  router.py  sample_response.py
backend/schemas/: prompt.py
frontend/: package.json
frontend/local/: t.md
frontend/src/: editor.tsx  latex_md_test.tsx  main.tsx
